[package]
name = "myvulkano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
rand = "0.8.5"
shaderc = "0.8.2"
shaderc-sys = { version = "0.8.2", features = ["build-from-source"] }
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-util = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28.6"

[profile.dev]
opt-level = 1
